--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -141,6 +141,7 @@ MOZ_UNIVERSALCHARDET = @MOZ_UNIVERSALCHARDET@
 ACCESSIBILITY = @ACCESSIBILITY@
 MOZ_BRANDING_DIRECTORY = @MOZ_BRANDING_DIRECTORY@
 XPCOM_USE_LEA = @XPCOM_USE_LEA@
+MOZ_INSTALLER	= @MOZ_INSTALLER@
 MOZ_MAINTENANCE_SERVICE	= @MOZ_MAINTENANCE_SERVICE@
 MOZ_VERIFY_MAR_SIGNATURE	= @MOZ_VERIFY_MAR_SIGNATURE@
 MOZ_ENABLE_SIGNMAR	= @MOZ_ENABLE_SIGNMAR@
@@ -690,6 +691,7 @@ ANDROID_PLATFORM  = @ANDROID_PLATFORM@
 ANDROID_SDK       = @ANDROID_SDK@
 ANDROID_PLATFORM_TOOLS = @ANDROID_PLATFORM_TOOLS@
 ANDROID_VERSION   = @ANDROID_VERSION@
+STLPORT_SOURCES   = @STLPORT_SOURCES@
 
 ANDROID_PACKAGE_NAME = @ANDROID_PACKAGE_NAME@
 
