Bug 737087 - Fire error event on <script> load failure per spec/other browsers; r=sicking
UltraBlame original commit: f9053a07fb7ac1ac58a13c44e1b06c5a4d8debb9

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -286,7 +286,6 @@ _TEST_FILES1 = \
 		file_XHRDocURI.text^headers^ \
 		test_DOMException.html \
 		test_mutationobservers.html \
-		mutationobserver_dialog.html \
 		$(NULL)
 
 _TEST_FILES2 = \
@@ -576,6 +575,7 @@ _TEST_FILES2 = \
 		file_bug650386_content.sjs \
 		file_bug650386_report.sjs \
 		test_bug719533.html \
+		test_bug737087.html \
 		$(NULL)
 
 _CHROME_FILES =	\
