--- a/mobile/android/base/db/BrowserProvider.java.in
+++ b/mobile/android/base/db/BrowserProvider.java.in
@@ -455,7 +455,7 @@ public class BrowserProvider extends ContentProvider {
         }
 
         private void createDefaultBookmarks(SQLiteDatabase db, String pattern) {
-            Class<?> stringsClass = R.string.class;
+            Class stringsClass = R.string.class;
 
             Field[] fields = stringsClass.getFields();
             Pattern p = Pattern.compile(pattern);
@@ -498,7 +498,7 @@ public class BrowserProvider extends ContentProvider {
         }
 
         private void setDefaultFavicon(SQLiteDatabase db, String name, String url) {
-            Class<?> drawablesClass = R.drawable.class;
+            Class drawablesClass = R.drawable.class;
             ByteArrayOutputStream stream = null;
             try {
                 // Look for a drawable with the id R.drawable.bookmarkdefaults_favicon_*
@@ -1478,39 +1478,45 @@ public class BrowserProvider extends ContentProvider {
         MatrixCursor cursor = new MatrixCursor(projection);
         MatrixCursor.RowBuilder row = cursor.newRow();
         synchronized (this) {
+            boolean wantBookmarks = false;
+            boolean wantHistory   = false;
+            boolean needBookmarks = false;
+            boolean needHistory   = false;
+
             for (String key : projection) {
-                ProfileMigrator migrator =
-                    new ProfileMigrator(mContext.getContentResolver(), profileDir);
                 if (key.equals(Control.ENSURE_BOOKMARKS_MIGRATED)) {
-                    if (migrator.isBookmarksMigrated()) {
-                        // generic Cursor has no boolean support, use ints.
-                        row.add(1);
-                    } else {
-                        // Start migration.
-                        migrator.launch();
-                        boolean bookmarksDone = migrator.isBookmarksMigrated();
-
-                        // We expect bookmarks to finish in one pass. Warn if
-                        // this is not the case.
-                        if (!bookmarksDone) {
-                            Log.w(LOGTAG, "Bookmarks migration did not finish.");
-                        }
-
-                        row.add(bookmarksDone ? 1 : 0);
-                    }
+                    wantBookmarks = true;
                 } else if (key.equals(Control.ENSURE_HISTORY_MIGRATED)) {
-                    // Are we done?
-                    if (migrator.hasMigrationFinished()) {
-                        row.add(1);
-                    } else {
-                        // Migrate some more
-                        migrator.launch();
-                        // Are we done now?
-                        row.add(migrator.hasMigrationFinished() ? 1 : 0);
-                    }
+                    wantHistory = true;
                 }
             }
+
+            if (wantHistory || wantBookmarks) {
+                ProfileMigrator migrator =
+                    new ProfileMigrator(mContext.getContentResolver(), profileDir);
+
+                needBookmarks = wantBookmarks && !migrator.isBookmarksMigrated();
+                needHistory = wantHistory && !migrator.isHistoryMigrated();
+
+                if (needBookmarks || needHistory) {
+                    migrator.launch();
+
+                    needBookmarks = wantBookmarks && !migrator.isBookmarksMigrated();
+                    needHistory = wantHistory && !migrator.isHistoryMigrated();
+                    // Bookmarks are expected to finish at the first run.
+                    if (needBookmarks) {
+                        Log.w(LOGTAG, "Bookmarks migration did not finish.");
+                    }
+                }
+
+                // Now set the results.
+                if (wantBookmarks)
+                    row.add(needBookmarks ? 0 : 1);
+                if (wantHistory)
+                    row.add(needHistory   ? 0 : 1);
+            }
         }
+
         return cursor;
     }
 
