--- a/dom/mobilemessage/src/Makefile.in
+++ b/dom/mobilemessage/src/Makefile.in
@@ -37,6 +37,7 @@ EXPORTS_mozilla/dom = \
   MobileMessageManager.h \
   SmsMessage.h \
   MmsMessage.h \
+  SmsRequest.h \
   SmsSegmentInfo.h \
   SmsFilter.h \
   $(NULL)
@@ -52,8 +53,6 @@ EXPORTS_mozilla/dom/mobilemessage = \
   $(NULL)
 
 CPPSRCS = \
-  MobileMessageCursorCallback.cpp \
-  MobileMessageThread.cpp \
   SmsManager.cpp \
   MobileMessageManager.cpp \
   SmsService.cpp \
@@ -65,9 +64,11 @@ CPPSRCS = \
   MmsMessage.cpp \
   Constants.cpp \
   SmsChild.cpp \
+  SmsRequest.cpp \
   MobileMessageCallback.cpp \
   SmsFilter.cpp \
   SmsSegmentInfo.cpp \
+  SmsCursor.cpp \
   $(NULL)
 
 LOCAL_INCLUDES = \
