Bug 860591.  Install WebIDL quickstubs for event interfaces as needed.  r=smaug
UltraBlame original commit: 4f911913dadf09002ed088128fb98af90462d3cb

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -344,11 +344,6 @@ DOMInterfaces = {
     'resultNotAddRefed': [ 'item' ]
 },
 
-'FileReader': {
-    'nativeType': 'nsDOMFileReader',
-    'implicitJSContext': [ 'readAsArrayBuffer' ],
-},
-
 'FileReaderSync': {
     'workers': True,
 },
@@ -506,15 +501,6 @@ DOMInterfaces = {
     }
 },
 
-'HTMLSelectElement': {
-    'resultNotAddRefed': [
-        'form',
-        'item',
-        'options',
-        'IndexedGetter',
-    ]
-},
-
 'HTMLStyleElement': {
     'resultNotAddRefed': [
         'sheet'
@@ -595,6 +581,7 @@ DOMInterfaces = {
 
 'MouseEvent': {
     'nativeType': 'nsDOMMouseEvent',
+    'hasXPConnectImpls': True,
 },
 
 'MozChannel': [
@@ -1004,6 +991,7 @@ DOMInterfaces = {
 
 'UIEvent': {
     'nativeType': 'nsDOMUIEvent',
+    'hasXPConnectImpls': True
 },
 
 'URL' : [{
@@ -1472,9 +1460,8 @@ addExternalIface('DOMError')
 addExternalIface('CSSRuleList')
 addExternalIface('DOMStringList')
 addExternalIface('File')
-addExternalIface('FileCallback', nativeType='nsIFileCallback',
-                 headerFile='nsIDOMHTMLCanvasElement.h')
 addExternalIface('HitRegionOptions', nativeType='nsISupports')
+addExternalIface('HTMLCanvasElement', nativeType='mozilla::dom::HTMLCanvasElement')
 addExternalIface('IDBOpenDBRequest', nativeType='nsIIDBOpenDBRequest')
 addExternalIface('imgINotificationObserver', nativeType='imgINotificationObserver')
 addExternalIface('imgIRequest', nativeType='imgIRequest', notflattened=True)
@@ -1491,8 +1478,6 @@ addExternalIface('MozRDFResource', nativeType='nsIRDFResource', notflattened=Tru
 addExternalIface('MozXULTemplateBuilder', nativeType='nsIXULTemplateBuilder')
 addExternalIface('MozNamedAttrMap')
 addExternalIface('nsIControllers', nativeType='nsIControllers')
-addExternalIface('nsIInputStreamCallback', nativeType='nsIInputStreamCallback',
-                 headerFile='nsIAsyncInputStream.h')
 addExternalIface('nsIStreamListener', nativeType='nsIStreamListener', notflattened=True)
 addExternalIface('nsISupports', nativeType='nsISupports')
 addExternalIface('nsIEditor', nativeType='nsIEditor', notflattened=True)
@@ -1501,8 +1486,6 @@ addExternalIface('OutputStream', nativeType='nsIOutputStream',
                  notflattened=True)
 addExternalIface('Principal', nativeType='nsIPrincipal',
                  headerFile='nsIPrincipal.h', notflattened=True)
-addExternalIface('PrintCallback', nativeType='nsIPrintCallback',
-                 headerFile='nsIDOMHTMLCanvasElement.h')
 addExternalIface('Selection', nativeType='nsISelection')
 addExternalIface('StyleSheetList')
 addExternalIface('SVGAnimatedEnumeration', headerFile='nsIDOMSVGAnimatedEnum.h')
