--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -557,6 +557,10 @@ DOMInterfaces = {
     'workers': True,
 }],
 
+'KeyEvent': {
+    'nativeType': 'nsDOMKeyboardEvent',
+},
+
 'Location': {
     # NOTE: Before you turn on codegen for Location, make sure all the
     # Unforgeable stuff is dealt with.
@@ -960,12 +964,6 @@ DOMInterfaces = {
     'resultNotAddRefed': [ 'getItem' ]
 },
 
-'SVGStringList': {
-    'nativeType': 'mozilla::DOMSVGStringList',
-    'headerFile': 'DOMSVGStringList.h',
-    'nativeOwnership': 'refcounted',
-},
-
 'SVGSVGElement': {
     'resultNotAddRefed': [ 'getElementById' ]
 },
@@ -1017,10 +1015,6 @@ DOMInterfaces = {
 
 'TransitionEvent': {
     'nativeType': 'nsDOMTransitionEvent',
-},
-
-'TreeColumns': {
-    'nativeType': 'nsTreeColumns',
 },
 
 'TreeWalker': {
@@ -1516,10 +1510,6 @@ addExternalIface('MozObserver', nativeType='nsIObserver', notflattened=True)
 addExternalIface('MozRDFCompositeDataSource', nativeType='nsIRDFCompositeDataSource',
                  notflattened=True)
 addExternalIface('MozRDFResource', nativeType='nsIRDFResource', notflattened=True)
-addExternalIface('MozTreeBoxObject', nativeType='nsITreeBoxObject',
-                 notflattened=True)
-addExternalIface('MozTreeColumn', nativeType='nsITreeColumn',
-                 headerFile='nsITreeColumns.h')
 addExternalIface('MozXULTemplateBuilder', nativeType='nsIXULTemplateBuilder')
 addExternalIface('MozNamedAttrMap')
 addExternalIface('nsIControllers', nativeType='nsIControllers')
@@ -1542,6 +1532,7 @@ addExternalIface('SVGAnimatedNumber')
 addExternalIface('SVGAnimatedString')
 addExternalIface('SVGLength')
 addExternalIface('SVGNumber')
+addExternalIface('Touch', headerFile='nsIDOMTouchEvent.h')
 addExternalIface('TouchList', headerFile='nsIDOMTouchEvent.h')
 addExternalIface('URI', nativeType='nsIURI', headerFile='nsIURI.h',
                  notflattened=True)
