--- a/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations.html.ini
@@ -47,14 +47,22 @@
     expected: TIMEOUT
 
   [crossorigin state not changed: empty to anonymous]
-    expected: FAIL
+    expected:
+      if debug and (os == "win") and (version == "6.1.7601") and (processor == "x86") and (bits == 32): PASS
+      FAIL
 
   [crossorigin state not changed: anonymous to foobar]
-    expected: FAIL
+    expected:
+      if debug and (os == "win") and (version == "6.1.7601") and (processor == "x86") and (bits == 32): PASS
+      FAIL
 
   [crossorigin state not changed: use-credentials to USE-CREDENTIALS]
-    expected: FAIL
+    expected:
+      if debug and (os == "win") and (version == "6.1.7601") and (processor == "x86") and (bits == 32): PASS
+      FAIL
 
   [picture is inserted]
-    expected: FAIL
+    expected:
+      if debug and (os == "win") and (version == "6.1.7601") and (processor == "x86") and (bits == 32): PASS
+      FAIL
 
