Bug 952456 - Part 3: Enable test_copyimage.html on gonk/cocoa r=fabrice
Enable dom/base/test/test_copyimage.html on b2g emulators and macos

UltraBlame original commit: df6e7f025c654258e800ff50acb66d0a4bfc8f8f

--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -247,8 +247,6 @@ support-files =
   referrer_testserver.sjs
   script_postmessages_fileList.js
   iframe_postMessages.html
-  test_performance_observer.js
-  performance_observer.html
 
 [test_anonymousContent_api.html]
 [test_anonymousContent_append_after_reflow.html]
@@ -306,7 +304,6 @@ skip-if = buildapp == 'mulet' || buildapp == 'b2g' || toolkit == 'android' || e1
 [test_noAudioNotificationOnMutedElement.html]
 [test_noAudioNotificationOnMutedOrVolume0Element.html]
 [test_noAudioNotificationOnVolume0Element.html]
-[test_noWebAudioNotification.html]
 [test_openDialogChromeOnly.html]
 [test_open_null_features.html]
 skip-if = (buildapp == 'b2g' && toolkit != 'gonk') # Fails on b2g-desktop, tracked in bug 1011874
@@ -701,7 +698,7 @@ support-files = referrerHelper.js
 [test_classList.html]
 # This test fails on the Mac for some reason
 [test_copyimage.html]
-skip-if = (buildapp == 'b2g' && toolkit != 'gonk') || toolkit != 'gtk2' && toolkit != 'gtk3' && toolkit != 'windows' || e10s #b2g-desktop(Bug 931116, b2g desktop specific, initial triage)
+skip-if = (buildapp == 'b2g' && toolkit != 'gonk') || (toolkit != 'cocoa' && toolkit != 'gonk' && toolkit != 'gtk2' && toolkit != 'gtk3' && toolkit != 'windows') || e10s #b2g-desktop(Bug 931116, b2g desktop specific, initial triage)
 [test_copypaste.html]
 skip-if = buildapp == 'b2g' || toolkit == 'android' || e10s #bug 904183 # b2g(clipboard undefined) b2g-debug(clipboard undefined) b2g-desktop(clipboard undefined)
 [test_copypaste.xhtml]
@@ -807,7 +804,6 @@ skip-if = buildapp == 'mulet' || buildapp == 'b2g' || toolkit == 'android'
 skip-if = buildapp == 'b2g' || toolkit == 'android' || e10s
 [test_window_define_nonconfigurable.html]
 [test_root_iframe.html]
-[test_performance_observer.html]
 [test_performance_user_timing.html]
 [test_bug1126851.html]
 skip-if = buildapp == 'mulet' || buildapp == 'b2g'
