--- a/dom/workers/test/serviceworkers/mochitest.ini
+++ b/dom/workers/test/serviceworkers/mochitest.ini
@@ -156,6 +156,8 @@ support-files =
   test_request_context.js
   fetch_event_client.js
   sw_clients/dummy.html
+  fetch/plugin/worker.js
+  fetch/plugin/plugins.html
 
 [test_app_protocol.html]
 skip-if = release_build
@@ -244,3 +246,4 @@ skip-if = toolkit == "android" || toolkit == "gonk"
 [test_workerupdatefoundevent.html]
 [test_opaque_intercept.html]
 [test_fetch_event_client_postmessage.html]
+[test_not_intercept_plugin.html]
