--- a/toolkit/devtools/server/tests/unit/xpcshell.ini
+++ b/toolkit/devtools/server/tests/unit/xpcshell.ini
@@ -59,6 +59,7 @@ skip-if = os == 'linux' # Bug 1176173
 [test_HeapSnapshot_takeCensus_08.js]
 [test_HeapSnapshot_takeCensus_09.js]
 [test_HeapSnapshot_takeCensus_10.js]
+[test_HeapSnapshot_takeCensus_11.js]
 [test_dbgactor.js]
 [test_dbgglobal.js]
 [test_dbgclient_debuggerstatement.js]
