--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -774,6 +774,8 @@ description =
 description =
 [PContent::ReadFontList]
 description =
+[PContent::ReadPermissions]
+description =
 [PContent::GetClipboard]
 description =
 [PContent::ClipboardHasType]
@@ -793,6 +795,8 @@ description =
 [PContent::BeginDriverCrashGuard]
 description =
 [PContent::EndDriverCrashGuard]
+description =
+[PContent::OpenAnonymousTemporaryFile]
 description =
 [PContent::KeygenProcessValue]
 description =
@@ -946,8 +950,6 @@ description =
 [PWebRenderBridge::DPGetSnapshot]
 description =
 [PVRManager::GetSensorState]
-description =
-[PVRManager::SetHaveEventListener]
 description =
 [PHal::GetCurrentBatteryInformation]
 description =
