Bug 1338871 - Enable Talos tests for linux64-stylo builds r=jmaher DONTBUILD
UltraBlame original commit: c309f93f5c33eaaff2294ef70ab18158d3fbb25d

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -9,6 +9,10 @@ cppunit:
     description: "CPP Unit Tests"
     suite: cppunittest
     treeherder-symbol: tc(Cpp)
+    instance-size:
+        by-test-platform:
+            linux64-ccov/opt: xlarge
+            default: default
     e10s: false
     docker-image: {"in-tree": "desktop1604-test"}
     run-on-projects:
@@ -64,6 +68,7 @@ crashtest:
     e10s:
         by-test-platform:
             windows.*: false # Bug 1304435
+            linux64-ccov/opt: false
             macosx64/debug: true
             default: both
     mozharness:
@@ -172,9 +177,17 @@ firefox-ui-functional-local:
     description: "Firefox-ui-tests functional run"
     suite: "firefox-ui/functional local"
     treeherder-symbol: tc-Fxfn-l(en-US)
+    instance-size:
+        by-test-platform:
+            linux64-ccov/opt: xlarge
+            default: default
     max-run-time: 5400
     tier: 1
     docker-image: {"in-tree": "desktop1604-test"}
+    e10s:
+        by-test-platform:
+            linux64-ccov/opt: false
+            default: both
     mozharness:
         script: firefox_ui_tests/functional.py
         config:
@@ -188,9 +201,17 @@ firefox-ui-functional-remote:
     description: "Firefox-ui-tests functional run"
     suite: "firefox-ui/functional remote"
     treeherder-symbol: tc-Fxfn-r(en-US)
+    instance-size:
+        by-test-platform:
+            linux64-ccov/opt: xlarge
+            default: default
     max-run-time: 5400
     tier: 2
     docker-image: {"in-tree": "desktop1604-test"}
+    e10s:
+        by-test-platform:
+            linux64-ccov/opt: false
+            default: both
     mozharness:
         script: firefox_ui_tests/functional.py
         config:
@@ -231,6 +252,10 @@ jittest:
     description: "JIT Test run"
     suite: jittest/jittest-chunked
     treeherder-symbol: tc(Jit)
+    instance-size:
+        by-test-platform:
+            linux64-ccov/opt: xlarge
+            default: default
     e10s: false
     docker-image: {"in-tree": "desktop1604-test"}
     run-on-projects:
@@ -289,6 +314,7 @@ jsreftest:
             # Bug 1321782
             windows.*: false
             android.*: false
+            linux64-ccov/opt: false
             macosx.*: true
             default: both
     max-run-time:
@@ -341,6 +367,7 @@ marionette:
     instance-size:
         by-test-platform:
             android.*: xlarge
+            linux64-ccov/opt: xlarge
             default: default
     docker-image: {"in-tree": "desktop1604-test"}
     tier:
@@ -353,6 +380,7 @@ marionette:
             default: 1
     e10s:
         by-test-platform:
+            linux64-ccov/opt: false
             macosx.*: true
             default: both
     mozharness:
@@ -397,6 +425,7 @@ mochitest:
             linux.*: 10
     e10s:
         by-test-platform:
+            linux64-ccov/opt: false
             linux64-jsdcov/opt: false
             android.*: false
             macosx64/debug: true
@@ -443,6 +472,10 @@ mochitest-a11y:
     description: "Mochitest a11y run"
     suite: mochitest/a11y
     treeherder-symbol: tc-M(a11y)
+    instance-size:
+        by-test-platform:
+            linux64-ccov/opt: xlarge
+            default: default
     loopback-video: true
     e10s: false
     docker-image: {"in-tree": "desktop1604-test"}
@@ -486,6 +519,7 @@ mochitest-browser-chrome:
     e10s:
         by-test-platform:
             linux64-jsdcov/opt: false
+            linux64-ccov/opt: false
             macosx64/debug: true
             default: both
     max-run-time:
@@ -520,6 +554,7 @@ mochitest-browser-chrome:
     instance-size:
         by-test-platform:
             linux64-jsdcov/opt: xlarge
+            linux64-ccov/opt: xlarge
             default: legacy
     allow-software-gl-layers: false
 
@@ -562,6 +597,7 @@ mochitest-chrome:
     instance-size:
         by-test-platform:
             android.*: xlarge
+            linux64-ccov/opt: xlarge
             default: default
     chunks:
         by-test-platform:
@@ -611,6 +647,7 @@ mochitest-clipboard:
     e10s:
       by-test-platform:
         macosx64/debug: true
+        linux64-ccov/opt: false
         default: both
     mozharness:
         by-test-platform:
@@ -661,6 +698,7 @@ mochitest-devtools-chrome:
             default: ['all']
     e10s:
         by-test-platform:
+            linux64-ccov/opt: false
             linux64-jsdcov/opt: false
             # Bug 1304433: mochitest-devtools-chrome (e10s) not greened on windows
             windows.*: false
@@ -699,6 +737,10 @@ mochitest-gpu:
     description: "Mochitest GPU run"
     suite: mochitest/gpu
     treeherder-symbol: tc-M(gpu)
+    instance-size:
+        by-test-platform:
+            linux64-ccov/opt: xlarge
+            default: default
     loopback-video: true
     docker-image: {"in-tree": "desktop1604-test"}
     run-on-projects:
@@ -710,6 +752,7 @@ mochitest-gpu:
             windows.*: both
             android.*: false
             macosx64/opt: both
+            linux64-ccov/opt: false
             default: true
     mozharness:
         by-test-platform:
@@ -744,6 +787,10 @@ mochitest-jetpack:
     description: "Mochitest jetpack run"
     suite: mochitest/jetpack-package
     treeherder-symbol: tc-M(JP)
+    instance-size:
+        by-test-platform:
+            linux64-ccov/opt: xlarge
+            default: default
     loopback-video: true
     e10s: false
     max-run-time: 5400
@@ -780,10 +827,12 @@ mochitest-media:
     e10s:
       by-test-platform:
         macosx64/debug: true
+        linux64-ccov/opt: false
         default: both
     instance-size:
         by-test-platform:
             android.*: xlarge
+            linux64-ccov/opt: xlarge
             default: large
     chunks:
         by-test-platform:
@@ -865,6 +914,7 @@ mochitest-webgl:
     e10s:
       by-test-platform:
         macosx.*: true
+        linux64-ccov/opt: false
         default: both
     loopback-video: true
     max-run-time:
@@ -874,6 +924,7 @@ mochitest-webgl:
     instance-size:
         by-test-platform:
             android.*: xlarge
+            linux64-ccov/opt: xlarge
             default: default
     # Bug 1296733: llvmpipe with mesa 9.2.1 lacks thread safety
     allow-software-gl-layers: false
@@ -975,6 +1026,7 @@ reftest:
             default: 3600
     e10s:
         by-test-platform:
+            linux64-ccov/opt: false
             macosx.*: true
             default: both
     mozharness:
@@ -1010,6 +1062,10 @@ reftest-no-accel:
     description: "Reftest not accelerated run"
     suite: reftest/reftest-no-accel
     treeherder-symbol: tc-R(Ru)
+    instance-size:
+        by-test-platform:
+            linux64-ccov/opt: xlarge
+            default: default
     docker-image: {"in-tree": "desktop1604-test"}
     run-on-projects:
         by-test-platform:
@@ -1019,6 +1075,10 @@ reftest-no-accel:
         by-test-platform:
             macosx.*: 1
             default: 8
+    e10s:
+        by-test-platform:
+            linux64-ccov/opt: false
+            default: both
     mozharness:
         script: desktop_unittest.py
         no-read-buildbot-config: true
@@ -1098,7 +1158,7 @@ talos-chrome:
     treeherder-symbol: tc-T(c)
     run-on-projects:
         by-test-platform:
-            linux64-stylo/.*: []
+            linux64-stylo/.*: ['mozilla-central', 'try']
             default: ['mozilla-beta', 'mozilla-aurora', 'mozilla-central', 'mozilla-inbound', 'autoland', 'try']
     max-run-time: 3600
     mozharness:
@@ -1119,7 +1179,7 @@ talos-dromaeojs:
     treeherder-symbol: tc-T(d)
     run-on-projects:
         by-test-platform:
-            linux64-stylo/.*: []
+            linux64-stylo/.*: ['mozilla-central', 'try']
             default: ['mozilla-beta', 'mozilla-aurora', 'mozilla-central', 'mozilla-inbound', 'autoland', 'try']
     max-run-time: 3600
     mozharness:
@@ -1140,7 +1200,7 @@ talos-g1:
     treeherder-symbol: tc-T(g1)
     run-on-projects:
         by-test-platform:
-            linux64-stylo/.*: []
+            linux64-stylo/.*: ['mozilla-central', 'try']
             default: ['mozilla-beta', 'mozilla-aurora', 'mozilla-central', 'mozilla-inbound', 'autoland', 'try'] 
     max-run-time: 3600
     mozharness:
@@ -1162,7 +1222,7 @@ talos-g2:
     max-run-time: 3600
     run-on-projects:
         by-test-platform:
-            linux64-stylo/.*: []
+            linux64-stylo/.*: ['mozilla-central', 'try']
             default: ['mozilla-beta', 'mozilla-aurora', 'mozilla-central', 'mozilla-inbound', 'autoland', 'try'] 
     mozharness:
         script: talos_script.py
@@ -1182,7 +1242,7 @@ talos-g3:
     treeherder-symbol: tc-T(g3)
     run-on-projects:
         by-test-platform:
-            linux64-stylo/.*: []
+            linux64-stylo/.*: ['mozilla-central', 'try']
             default: ['mozilla-beta', 'mozilla-aurora', 'mozilla-central', 'mozilla-inbound', 'autoland', 'try'] 
     max-run-time: 3600
     mozharness:
@@ -1203,7 +1263,7 @@ talos-g4:
     treeherder-symbol: tc-T(g4)
     run-on-projects:
         by-test-platform:
-            linux64-stylo/.*: []
+            linux64-stylo/.*: ['mozilla-central', 'try']
             default: ['mozilla-beta', 'mozilla-aurora', 'mozilla-central', 'mozilla-inbound', 'autoland', 'try'] 
     max-run-time: 3600
     mozharness:
@@ -1224,7 +1284,7 @@ talos-other:
     treeherder-symbol: tc-T(o)
     run-on-projects:
         by-test-platform:
-            linux64-stylo/.*: []
+            linux64-stylo/.*: ['mozilla-central', 'try']
             default: ['mozilla-beta', 'mozilla-aurora', 'mozilla-central', 'mozilla-inbound', 'autoland', 'try'] 
     max-run-time: 3600
     mozharness:
@@ -1245,7 +1305,7 @@ talos-svgr:
     treeherder-symbol: tc-T(s)
     run-on-projects:
         by-test-platform:
-            linux64-stylo/.*: []
+            linux64-stylo/.*: ['mozilla-central', 'try']
             default: ['mozilla-beta', 'mozilla-aurora', 'mozilla-central', 'mozilla-inbound', 'autoland', 'try']
     max-run-time: 3600
     mozharness:
@@ -1266,7 +1326,7 @@ talos-tp5o:
     treeherder-symbol: tc-T(tp)
     run-on-projects:
         by-test-platform:
-            linux64-stylo/.*: []
+            linux64-stylo/.*: ['mozilla-central', 'try']
             default: ['mozilla-beta', 'mozilla-aurora', 'mozilla-central', 'mozilla-inbound', 'autoland', 'try']
     max-run-time: 3600
     mozharness:
@@ -1309,6 +1369,7 @@ web-platform-tests:
         default: 12
     e10s:
         by-test-platform:
+            linux64-ccov/opt: false
             macosx.*: true
             default: both
     max-run-time: 7200
