--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -873,7 +873,6 @@ mochitest-webgl:
     loopback-video: true
     max-run-time:
         by-test-platform:
-            windows.*: 5400
             android.*: 7200
             default: 3600
     instance-size:
@@ -980,8 +979,6 @@ reftest:
             default: 3600
     e10s:
         by-test-platform:
-            # bug 1351272
-            windows7-32/debug: false
             macosx.*: true
             default: both
     mozharness:
@@ -1026,11 +1023,6 @@ reftest-no-accel:
         by-test-platform:
             macosx.*: 1
             default: 8
-    e10s:
-        by-test-platform:
-            # bug 1351272
-            windows7-32/debug: false
-            default: both
     mozharness:
         script: desktop_unittest.py
         no-read-buildbot-config: true
@@ -1306,6 +1298,8 @@ awsy:
         script: awsy_script.py
         config:
             by-test-platform:
+                windows.*:
+                    - awsy/taskcluster_windows_config.py
                 default:
                     - awsy/linux_config.py
 
