--- a/devtools/client/webconsole/package.json
+++ b/devtools/client/webconsole/package.json
@@ -19,11 +19,11 @@
     "file-loader": "^1.1.6",
     "netmonitor": "file:../netmonitor",
     "raw-loader": "^0.5.1",
-    "react": "=15.3.2",
-    "react-addons-perf": "=15.3.2",
-    "react-dom": "=15.3.2",
-    "react-redux": "=5.0.3",
-    "redux": "^3.6.0",
-    "require-hacker": "^2.1.4",
+    "react": "=16.2.0",
+    "react-dom": "=16.2.0",
+    "react-prop-types": "=0.4.0",
+    "react-redux": "=5.0.6",
+    "redux": "^3.7.2",
+    "require-hacker": "^2.1.4"
   }
 }
