--- a/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
+++ b/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
@@ -11,6 +11,7 @@ support-files =
   source-mapped.css
   source-mapped.css.map
   source-mapped.scss
+  test_bug_1247459_violation.html
   test_bug_770099_violation.html
   test_bug_770099_violation.html^headers^
   test_console_csp_ignore_reflected_xss_message.html
@@ -43,7 +44,6 @@ support-files =
   test-cd-iframe-child.html
   test-cd-iframe-parent.html
   test-console-api-iframe.html
-  test-csp-violation.html
   test-cspro.html
   test-cspro.html^headers^
   test-iframe-child.html
@@ -265,7 +265,6 @@ subsuite = clipboard
 [browser_webconsole_context_menu_store_as_global.js]
 [browser_webconsole_csp_ignore_reflected_xss_message.js]
 skip-if = (e10s && debug) || (e10s && os == 'win') # Bug 1221499 enabled these on windows
-[browser_webconsole_csp_violation.js]
 [browser_webconsole_cspro.js]
 [browser_webconsole_document_focus.js]
 [browser_webconsole_duplicate_errors.js]
@@ -311,6 +310,7 @@ skip-if = true #	Bug 1403448
 [browser_webconsole_network_attach.js]
 [browser_webconsole_network_exceptions.js]
 [browser_webconsole_network_messages_expand.js]
+skip-if = (os == 'linux') || (os == 'win' && os_version == '10.0' && debug && bits == 64)  # Bug 1429361, disabled on Linux/Win for frequent failures
 [browser_webconsole_network_messages_openinnet.js]
 [browser_webconsole_network_messages_status_code.js]
 [browser_webconsole_network_requests_from_chrome.js]
@@ -344,8 +344,11 @@ subsuite = clipboard
 [browser_webconsole_sourcemap_nosource.js]
 [browser_webconsole_split.js]
 [browser_webconsole_split_escape_key.js]
+skip-if = true #	Bug 1405647
 [browser_webconsole_split_focus.js]
+skip-if = true #	Bug 1405648
 [browser_webconsole_split_persist.js]
+skip-if = true #	Bug 1405649
 [browser_webconsole_stacktrace_location_debugger_link.js]
 [browser_webconsole_stacktrace_location_scratchpad_link.js]
 [browser_webconsole_strict_mode_errors.js]
@@ -356,6 +359,9 @@ skip-if = true #	Bug 1404877
 [browser_webconsole_trackingprotection_errors.js]
 tags = trackingprotection
 [browser_webconsole_view_source.js]
+[browser_webconsole_violation.js]
+skip-if = true #	Bug 1405245
+# old console skip-if = e10s && (os == 'win') # Bug 1264955
 [browser_webconsole_visibility_messages.js]
 [browser_webconsole_warn_about_replaced_api.js]
 [browser_webconsole_websocket.js]
