Bug 1201590 - WebMIDI Mochitests; r=baku,padenot
MozReview-Commit-ID: F6bSQ4oCRDq

UltraBlame original commit: 21fc5c9ae6288bb9fe16b3cf44e38afb3fab6f00

--- a/.eslintignore
+++ b/.eslintignore
@@ -240,6 +240,7 @@ dom/mathml/**
 dom/media/**
 !dom/media/*.js*
 dom/messagechannel/**
+dom/midi/**
 dom/network/**
 dom/notification/Notification*.*
 dom/notification/test/browser/**
