Bug 1735123 [wpt PR 31183] - Update wpt metadata, a=testonly
wpt-pr: 31183
wpt-type: metadata

UltraBlame original commit: ba3f1d4aa9997f755232a5e5a8aa9ba0024cb28d

--- a/testing/web-platform/meta/css/css-fonts/variations/at-font-face-descriptors.html.ini
+++ b/testing/web-platform/meta/css/css-fonts/variations/at-font-face-descriptors.html.ini
@@ -161,3 +161,5 @@
   [font-style(valid): 'oblique' followed by calc with out of range value (should be clamped): oblique calc(91deg)]
     expected: FAIL
 
+  [font-weight(valid): 'auto' keyword: auto]
+    expected: FAIL
