Bug 1736410 [wpt PR 31301] - Update wpt metadata, a=testonly
wpt-pr: 31301
wpt-type: metadata

UltraBlame original commit: d3b44b4be82c131bf30a83cd138ce6cb5df929e2

--- a/testing/web-platform/meta/secure-payment-confirmation/secure-payment-confirmation-constructor.https.html.ini
+++ b/testing/web-platform/meta/secure-payment-confirmation/secure-payment-confirmation-constructor.https.html.ini
@@ -1,7 +1,4 @@
-[secure-payment-confirmation.tentative.https.html]
-  expected:
-    if win10_2004 and ccov: [TIMEOUT, OK]  # Bug 1733368
-    if os == "win": TIMEOUT
+[secure-payment-confirmation-constructor.https.html]
   [Valid payment method data does not throw exceptions.]
     expected: FAIL
 
@@ -17,13 +14,25 @@
   [The credentialIds field is required.]
     expected: FAIL
 
+  [The challenge field is required.]
+    expected: FAIL
+
   [Empty credentialIds field throws exception.]
+    expected: FAIL
+
+  [Null challenge field throws exception.]
+    expected: FAIL
+
+  [Empty challenge field throws exception.]
     expected: FAIL
 
   [Timeout longer than 1 hour throws exception.]
     expected: FAIL
 
   [Large credentialIds value throws exception.]
+    expected: FAIL
+
+  [Large challenge value throws exception.]
     expected: FAIL
 
   [Instrument field is required.]
@@ -33,18 +42,6 @@
     expected: FAIL
 
   [Instrument icon is required.]
-    expected: FAIL
-
-  [The challenge field is required.]
-    expected: FAIL
-
-  [Null challenge field throws exception.]
-    expected: FAIL
-
-  [Empty challenge field throws exception.]
-    expected: FAIL
-
-  [Large challenge value throws exception.]
     expected: FAIL
 
   [Payee origin is required.]
