Bug 1736573 [wpt PR 31312] - Update wpt metadata, a=testonly
wpt-pr: 31312
wpt-type: metadata

UltraBlame original commit: cf859509955b5f51b82705df24f289181c372c80

--- a/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/anonymous-iframe-popup.tentative.https.window.js.ini
+++ b/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/anonymous-iframe-popup.tentative.https.window.js.ini
@@ -1,4 +1,4 @@
-[anonymous-iframe-popup.tentative.https.html]
+[anonymous-iframe-popup.tentative.https.window.html]
   [Cross-origin popup from normal/anonymous iframes.]
     expected: FAIL
 
