--- a/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/serviceworker-partitioning.tentative.https.window.js.ini
+++ b/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/serviceworker-partitioning.tentative.https.window.js.ini
@@ -1,3 +1,3 @@
-[serviceworker-partitioning.tentative.https.html]
+[serviceworker-partitioning.tentative.https.window.html]
   [Anonymous iframes get partitioned service workers.]
     expected: FAIL
