--- a/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/sharedworker-partitioning.tentative.https.window.js.ini
+++ b/testing/web-platform/meta/html/cross-origin-embedder-policy/anonymous-iframe/sharedworker-partitioning.tentative.https.window.js.ini
@@ -1,3 +1,3 @@
-[sharedworker-partitioning.tentative.https.html]
+[sharedworker-partitioning.tentative.https.window.html]
   [Anonymous iframes get partitioned shared workers.]
     expected: FAIL
