Bug 1736813 [wpt PR 31330] - Update wpt metadata, a=testonly
wpt-pr: 31330
wpt-type: metadata

UltraBlame original commit: 5c31f7960eb1ec58b6b94faf947e38ec15d3000c

--- a/testing/web-platform/meta/css/css-fonts/variations/at-font-face-descriptors.html.ini
+++ b/testing/web-platform/meta/css/css-fonts/variations/at-font-face-descriptors.html.ini
@@ -163,3 +163,12 @@
 
   [font-weight(valid): 'auto' keyword: auto]
     expected: FAIL
+
+  [font-weight(valid): 'auto' keyword inside @font-face: auto]
+    expected: FAIL
+
+  [font-stretch(valid): 'auto' keyword inside @font-face: auto]
+    expected: FAIL
+
+  [font-style(valid): 'auto' keyword inside @font-face: auto]
+    expected: FAIL
