--- a/testing/web-platform/meta/client-hints/sec-ch-ua.https.html.ini
+++ b/testing/web-platform/meta/client-hints/sec-ch-ua.https.html.ini
@@ -5,3 +5,11 @@
   [Open HTTPS window prior to opt-in: `Sec-CH-UA` header with minor version.]
     expected: FAIL
 
+  [Open HTTPS window: `Sec-CH-UA` header returned by default.]
+    expected: FAIL
+
+  [Open HTTPS window: `Sec-CH-UA` header is consistent across versions.]
+    expected: FAIL
+
+  [Open HTTPS window: No brand in `Sec-CH-UA` header is > than 32 chars.]
+    expected: FAIL
