Bug 1525107 - Make Canvas/CanvasText and Link colors color-scheme-aware. r=dholbert
For that, add `.dark` version of the browser.display* prefs that control
the light version of these colors.

The default for background/foreground colors are taken from the
GenericDarkColors used in LookAndFeel.

The defaults for links are based on this discussion:

  https://github.com/whatwg/html/issues/5426#issuecomment-904021675

(So they effectively match Chrome).

Whether the dark colors should be exposed in about:preferences (like the
light colors are) is TBD.

With this patch, we pass all the tests in:

  /html/semantics/document-metadata/the-meta-element/color-scheme/

Use the colors to paint the default canvas background and the default
colors.

There are three "regressions", though they are really progressions: we
now render the reference as the test expects (before we rendered a light
canvas background even for the reference).

Apart of these iframe tests (which we should look into, I filed
https://bugzilla.mozilla.org/show_bug.cgi?id=1738380), there are three
remaining test failures.

Two of them are due to `color: initial` not changing based on the
color-scheme. Safari also fails these tests, and the thing they're
really testing is whether system colors are preserved at computed-value
time:

  https://github.com/w3c/csswg-drafts/issues/3847

Regarding that change, I'm not so sure the trade-offs there are worth
it, as that not only complicates interpolation (we wouldn't be able to
use system colors in color-mix among others, see
https://github.com/w3c/csswg-drafts/issues/5780) plus it changes
inheritance behavior in sorta unexpected ways, see:

  https://github.com/w3c/csswg-drafts/issues/6773

Which I just filed because apparently no browser implements this
correctly. So for now will punt on those (keep matching Safari).

There's an svg-as-image test:

  https://searchfox.org/mozilla-central/rev/f8576fec48d866c5f988baaf1fa8d2f8cce2a82f/testing/web-platform/tests/css/css

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -817,9 +817,19 @@
   value: "#EE0000"
   mirror: never
 
+- name: browser.active_color.dark
+  type: String
+  value: "#FF9E9E"
+  mirror: never
+
 - name: browser.anchor_color
   type: String
   value: "#0000EE"
+  mirror: never
+
+- name: browser.anchor_color.dark
+  type: String
+  value: "#9E9EFF"
   mirror: never
 
 # See http://dev.w3.org/html5/spec/forms.html#attr-fe-autofocus
@@ -964,6 +974,11 @@
   value: "#FFFFFF"
   mirror: never
 
+- name: browser.display.background_color.dark
+  type: String
+  value: "#1C1B22"
+  mirror: never
+
 # This preference is a bit confusing because we use the opposite
 # string value in the colors dialog to indicate to users how FF HCM
 # will behave.
@@ -1047,9 +1062,15 @@
   type: String
   value: "#ffffff"
   mirror: never
+
 - name: browser.display.foreground_color
   type: String
   value: "#000000"
+  mirror: never
+
+- name: browser.display.foreground_color.dark
+  type: String
+  value: "#FBFBFE"
   mirror: never
 
 # Whether focus rings are always shown by default.
@@ -1426,6 +1447,11 @@
 - name: browser.visited_color
   type: String
   value: "#551A8B"
+  mirror: never
+
+- name: browser.visited_color.dark
+  type: String
+  value: "#D0ADF0"
   mirror: never
 
 # When true, soft reloads (including location.reload())
