Bug 1654112 - Adapt VideoConduit to the new libwebrtc version. r=ng,bwc
This hooks up VideoReceiveStream::Config with a decoder factory and
VideoSendStream::Config with both a bitrate allocator factory and an encoder
factory.

The factories are new and wraps all the types of decoders and encoders that we
could create prior to this patch. This patch lets libwebrtc create our codecs
on demand, allowing for reconfiguring the streams and changing codec on the fly.

Some extra care had to be taken to ensure that GMP PluginIDs can be properly
plumbed. This has been implemented with MediaEvent and MozPromise.

Some other changes are made too, as warranted by runtime or threading changes.

Differential Revision: https://phabricator.services.mozilla.com/D104720

UltraBlame original commit: 7d270e96dfbfcc5992f9a1704e7d2229d1a645f3

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -8911,7 +8911,7 @@
   mirror: always
 
 - name: media.webrtc.platformencoder
-  type: bool
+  type: RelaxedAtomicBool
 #if defined(MOZ_WIDGET_ANDROID)
   value: true
 #elif defined(NIGHTLY_BUILD) && !defined(MOZ_WIDGET_GTK)
