Bug 1738787 - temporarily disable screen-capture/getdisplaymedia.https.html for test failures from race on Windows opt (shippable). a=Aryx DONTBUILD
Regression from bug 1654112.

UltraBlame original commit: 621b16274406ee83901794a90d0c987dffaee1cf

--- a/testing/web-platform/meta/screen-capture/getdisplaymedia.https.html.ini
+++ b/testing/web-platform/meta/screen-capture/getdisplaymedia.https.html.ini
@@ -2,12 +2,45 @@
   disabled:
     if (os == "android") and e10s: bug 1550895 (frequently fails on geckoview)
   expected:
-    if (os == "win") and not debug and fission: [OK, TIMEOUT]
+    if (os == "win") and not debug: [OK, TIMEOUT]
     if (os == "win") and debug and not fission: [OK, TIMEOUT, CRASH]
     if (os == "win") and debug and fission: [OK, TIMEOUT, CRASH]
   [getDisplayMedia() with getSettings]
-    expected: FAIL
+    expected:
+    expected:
+      if (os == "win") and not debug: [FAIL, NOTRUN]
+      FAIL
 
   [applyConstraints(width or height) must downscale precisely]
     expected:
       if debug: [PASS, FAIL]
+      if (os == "win") and not debug: [PASS, FAIL]
+
+  [getDisplayMedia({"video":{"width":{"max":0}}}) must fail with OverconstrainedError]
+    expected:
+      if (os == "win") and not debug: [PASS, NOTRUN]
+
+  [getDisplayMedia({"video":{"height":{"max":0}}}) must fail with OverconstrainedError]
+    expected:
+      if (os == "win") and not debug: [PASS, NOTRUN]
+
+  [getDisplayMedia({"video":{"frameRate":{"max":0}}}) must fail with OverconstrainedError]
+    expected:
+      if (os == "win") and not debug: [PASS, NOTRUN]
+
+  [getDisplayMedia({"video":{"width":{"max":-1}}}) must fail with OverconstrainedError]
+    expected:
+      if (os == "win") and not debug: [PASS, NOTRUN]
+
+  [getDisplayMedia({"video":{"height":{"max":-1}}}) must fail with OverconstrainedError]
+    expected:
+      if (os == "win") and not debug: [PASS, NOTRUN]
+
+  [getDisplayMedia({"video":{"frameRate":{"max":-1}}}) must fail with OverconstrainedError]
+    expected:
+      if (os == "win") and not debug: [PASS, NOTRUN]
+
+  [getDisplayMedia() resolves with stream with video track]
+    expected:
+      if (os == "win") and not debug: [PASS, NOTRUN]
+
