--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6824,12 +6824,6 @@
   mirror: always
   rust: true
 
-# Whether to use background-image to style autofill controls.
-- name: layout.css.autofill.background
-  type: bool
-  value: true
-  mirror: always
-
 # Whether the `:-moz-submit-invalid` pseudo-class is exposed to content.
 - name: layout.css.moz-submit-invalid.enabled
   type: RelaxedAtomicBool
@@ -8787,6 +8781,23 @@
   mirror: always
 
 #ifdef MOZ_WEBRTC
+  #ifdef ANDROID
+-     name: media.navigator.hardware.vp8_encode.acceleration_remote_enabled
+      type: bool
+      value: true
+      mirror: always
+
+-     name: media.navigator.hardware.vp8_encode.acceleration_enabled
+      type: bool
+      value: true
+      mirror: never
+
+-     name: media.navigator.hardware.vp8_decode.acceleration_enabled
+      type: bool
+      value: false
+      mirror: never
+  #endif  # ANDROID
+
   # Use MediaDataDecoder API for VP8/VP9 in WebRTC. This includes hardware
   # acceleration for decoding.
 -   name: media.navigator.mediadatadecoder_vpx_enabled
@@ -8894,7 +8905,7 @@
   mirror: always
 
 - name: media.webrtc.platformencoder
-  type: RelaxedAtomicBool
+  type: bool
 #if defined(MOZ_WIDGET_ANDROID)
   value: true
 #elif defined(NIGHTLY_BUILD) && !defined(MOZ_WIDGET_GTK)
