Bug 1738616 - Enable color-scheme for nightly and early beta. r=hiro
Differential Revision: https://phabricator.services.mozilla.com/D129995

UltraBlame original commit: 900009f02d589279a774505c16bdaef3d4cd1c8b

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6851,7 +6851,7 @@
 # Whether the `color-scheme` css property and meta tags are enabled.
 - name: layout.css.color-scheme.enabled
   type: RelaxedAtomicBool
-  value: false
+  value: @EARLY_BETA_OR_EARLIER@
   mirror: always
   rust: true
 
