Bug 1738613 - Provide generic dark hyperlink system colors. r=dholbert
This will make sure they're used on Windows for the dark color scheme.

Differential Revision: https://phabricator.services.mozilla.com/D129993

UltraBlame original commit: 8afba3940af5575725d3d47cd5494db0eb893dc8

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -827,6 +827,8 @@
   value: "#0000EE"
   mirror: never
 
+# If you change this, you probably also want to change
+# nsXPLookAndFeel::GenericDarkColor for MozNativehyperlinktext.
 - name: browser.anchor_color.dark
   type: String
   value: "#9E9EFF"
@@ -1449,6 +1451,8 @@
   value: "#551A8B"
   mirror: never
 
+# If you change this, you probably also want to change
+# nsXPLookAndFeel::GenericDarkColor for MozNativevisitedhyperlinktext.
 - name: browser.visited_color.dark
   type: String
   value: "#D0ADF0"
