Backed out changeset 02ea2d15bf4c (bug 1732736) for preventing content from getting rendered (bug 1738977). a=backout CLOSED TREE
UltraBlame original commit: 70ccbb2ebc815abd7c094fb09f397753a984e028

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12072,7 +12072,7 @@
 
 - name: widget.windows.window_occlusion_tracking.enabled
   type: bool
-  value: @IS_NIGHTLY_BUILD@
+  value: false
   mirror: always
 
 - name: widget.windows.window_occlusion_tracking_display_state.enabled
