Bug 1729640 - P6. Add a preference to enable setting `HighValueIsLoggedIn` permission when fission is off. r=farre
The preference should be enabled before rolling out "fission for authenticated sites"
to makes sure we have the permissions there when the feature is on.

Differential Revision: https://phabricator.services.mozilla.com/D127107

UltraBlame original commit: 9ec5346cf9d9301c11cc2f21da8353857b24d08f

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -4397,6 +4397,14 @@
   value: 2592000   # 30 days (in seconds)
   mirror: always
 
+# If true, capture login attemp, and add "highValueIsLoggedIn" permission to
+# the permission manager no matter whether fission is enabled and
+# WebContentIsolationStrateg is set to IsolateHighvalue.
+- name: fission.highValue.login.monitor
+  type: bool
+  value: false
+  mirror: always
+
 #---------------------------------------------------------------------------
 # Prefs starting with "font."
 #---------------------------------------------------------------------------
