Bug 1738663 - Add a pref to expose all shorthands in the computed style. r=layout-reviewers,mats
Make it always false for now, as we still need a solution for
layout-dependent shorthands like margin, padding, border, etc.

Differential Revision: https://phabricator.services.mozilla.com/D130039

UltraBlame original commit: ef84e5e1b1f900a74cd670e24b4d22bc0f1b7f73

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6903,6 +6903,12 @@
   value: true
   mirror: always
 
+# Whether we should expose all shorthands in getComputedStyle().
+- name: layout.css.computed-style.shorthands
+  type: bool
+  value: false
+  mirror: always
+
 # Are implicit tracks in computed grid templates serialized?
 - name: layout.css.serialize-grid-implicit-tracks
   type: RelaxedAtomicBool
