--- a/testing/web-platform/meta/app-history/app-history-entry/after-detach.html.ini
+++ b/testing/web-platform/meta/app-history/app-history-entry/after-detach.html.ini
@@ -1,3 +1,6 @@
 [after-detach.html]
   [AppHistoryEntry attributes after detach]
     expected: FAIL
+
+  [appHistory.current/entries()/canGoBack/canGoForward after iframe removal]
+    expected: FAIL
