Bug 1529082 - Add mochitest variant that runs using AAB test_runner. r=gbrown
This patch adds a new Mochitest variant which installs the test runner app as
AAB.

Differential Revision: https://phabricator.services.mozilla.com/D127324

UltraBlame original commit: 44a00ee735283ce78fa4d4767c9dcbca51775af8

--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -38,6 +38,7 @@ treeherder:
         'iris': 'Iris testing suite'
         'l10n-bump': 'L10n Bumper'
         'M': 'Mochitests'
+        'M-aab': 'Mochitests with AAB test_runner.'
         'M-1proc': 'Mochitests without e10s'
         'M-a11y-checks': 'Mochitests with accessibility checks enabled'
         'M-fis': 'Mochitests with fission enabled'
