--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -50,6 +50,7 @@ mochitest-plain:
     loopback-video: true
     virtualization: virtual
     variants:
+        - aab
         - fission
         - fission-xorigin
         - socketprocess_networking
@@ -82,6 +83,10 @@ mochitest-plain:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: built-projects
                     linux1804-64-qr/debug: built-projects
+                    default: []
+            aab:
+                by-test-platform:
+                    android-em-7.0-x86_64-qr/debug: built-projects
                     default: []
             default:
                 by-test-platform:
