Bug 1738963 - correct early beta variable name guarding preference in StaticPrefs.yaml. r=emilio
The code added in bug 1738616 used `EARLY_BETA_OR_EARLIER` but
`IS_EARLY_BETA_OR_EARLIER` should be used.

Differential Revision: https://phabricator.services.mozilla.com/D130208

UltraBlame original commit: aaeadfb23d36196bd845b549a37d3f61d8d10492

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6855,7 +6855,7 @@
 # Whether the `color-scheme` css property and meta tags are enabled.
 - name: layout.css.color-scheme.enabled
   type: RelaxedAtomicBool
-  value: @EARLY_BETA_OR_EARLIER@
+  value: @IS_EARLY_BETA_OR_EARLIER@
   mirror: always
   rust: true
 
@@ -12078,7 +12078,7 @@
 
 - name: widget.windows.window_occlusion_tracking.enabled
   type: bool
-  value: false
+  value: @IS_NIGHTLY_BUILD@
   mirror: always
 
 - name: widget.windows.window_occlusion_tracking_display_state.enabled
